--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,11 +79,11 @@ $black: #000000;
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
-  /*
+/*@media (prefers-color-scheme: dark) {
+  !*
    * Dark Colors
    * -------------------------------------------
-   */
+   *!
 
   body {
     --ion-color-primary: #428cff;
@@ -150,10 +150,10 @@ $black: #000000;
     --ion-color-light-tint: #383a3e;
   }
 
-  /*
+  !*
    * iOS Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .ios body {
     --ion-background-color: #000000;
@@ -193,10 +193,10 @@ $black: #000000;
     --ion-toolbar-border-color: var(--ion-color-step-250);
   }
 
-  /*
+  !*
    * Material Design Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .md body {
     --ion-background-color: #121212;
@@ -235,4 +235,4 @@ $black: #000000;
 
     --ion-card-background: #1e1e1e;
   }
-}
+}*/
