--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -4,9 +4,38 @@
 
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button *ngFor="let nav of navigation">
-      <span class="icon {{ nav.icon }}"></span>
-      <ion-label>{{ nav.name }}</ion-label>
+    <ion-tab-button tab='home'>
+      <span class="icon icon-home"></span>
+      <ion-label class='text-[10px] leading-[12px] text-gray'>Главная</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab='favourite'>
+      <span class="icon icon-favourite"></span>
+      <ion-label class='text-[10px] leading-[12px] text-gray'>Избранное</ion-label>
+    </ion-tab-button>
+    <ion-tab-button>
+      <span class="icon icon-create"></span>
+      <ion-label class='text-[10px] leading-[12px] text-gray'>Создать</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab='message'>
+      <span class="icon icon-message-icon"></span>
+      <ion-label class='text-[10px] leading-[12px] text-gray'>Сообщения</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab='profile'>
+      <span class="icon icon-user"></span>
+      <ion-label class='text-[10px] leading-[12px] text-gray'>Профиль</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
+
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu Content</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-menu-toggle>
+      <ion-button>Click to close the menu</ion-button>
+    </ion-menu-toggle>
+  </ion-content>
+</ion-menu>
