add new components

--- a/src/app/modules/auth/pages/register-page/register-page.component.html
+++ b/src/app/modules/auth/pages/register-page/register-page.component.html
@@ -3,23 +3,23 @@
     Регистрация
   </h1>
 
-  <form class="mt-[78px] flex flex-col gap-[32px]">
-    <div>
+  <form class="mt-[78px] flex flex-col">
+    <div class='mb-[16px]'>
       <app-input
         placeholder="Имя пользователя*"
         icon="icon-message"
       ></app-input>
     </div>
 
-    <div>
+    <div class='mb-[16px]'>
       <app-input placeholder="Номер телефона*" icon="icon-phone"></app-input>
     </div>
 
-    <div>
+    <div class='mb-[16px]'>
       <app-input placeholder="Email*" icon="icon-email"></app-input>
     </div>
 
-    <div>
+    <div class='mb-[16px]'>
       <app-input placeholder="Пароль*" icon="icon-lock"></app-input>
     </div>
 
