--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -1,10 +1,10 @@
 <div
-  class="flex gap-[13px] items-center pb-[16px] border-b-[1px] border-b-gray"
+  class="flex items-center pb-[16px] border-b-[1px] border-b-gray"
 >
   <span class="icon {{ icon }}"></span>
   <input
     type="text"
-    class="outline-none border-none w-full"
+    class="outline-none border-none w-full ml-[13px] placeholder:text-gray-100"
     [value]="value"
     [placeholder]="placeholder || ''"
     [attr.disabled]="isDisabled ? true : null"
