--- a/src/app/modules/dashboard/pages/product-details/product-details.component.html
+++ b/src/app/modules/dashboard/pages/product-details/product-details.component.html
@@ -1,3 +1,23 @@
 <ion-content>
-  <p>Lorem ipsum dolor sit amet.</p>
+  <div class='relative'>
+    <swiper [autoplay]='true' [keyboard]='true' [pagination]='true' [zoom]='true' [loop]='true'>
+      <ng-template swiperSlide>
+        <img class='w-full' src='./assets/02.png' alt=''>
+      </ng-template>
+      <ng-template swiperSlide>
+        <img class='w-full' src='./assets/02.png' alt=''>
+      </ng-template>
+      <ng-template swiperSlide>
+        <img class='w-full' src='./assets/02.png' alt=''>
+      </ng-template>
+    </swiper>
+
+    <div class='z-10 absolute top-[20px] left-[23px] right-[23px] flex justify-between items-center'>
+      <ion-nav-link router-direction="back" [component]="component"
+                    class='rotate-180 flex items-center justify-center bg-primary w-[44px] h-[44px] rounded-full hover:opacity-[.8]'>
+        <span class='icon icon-arrow-right bg-white w-[7px] h-[15px]'></span>
+      </ion-nav-link>
+      <span class='icon icon-heart bg-primary'></span>
+    </div>
+  </div>
 </ion-content>
