--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,9 @@
 @import 'src/theme/button';
 @import 'src/theme/icons';
 
+@import '~swiper/swiper-bundle.css';
+@import '~@ionic/angular/css/ionic-swiper.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -35,4 +38,16 @@
   font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
+}
+
+.swiper .swiper-pagination-bullet {
+  @apply bg-white opacity-[1];
+}
+
+.swiper .swiper-pagination-bullet-active {
+  @apply bg-primary;
+}
+.swiper .swiper-slide img {
+  width: 100%;
+  height: 338px;
 }
