--- a/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -19,7 +19,7 @@
       Забыли пароль ?
     </p>
 
-    <button class="btn btn-primary mt-[48px]" type="button">Вход</button>
+    <button class="btn btn-primary mt-[48px]" type="button" routerLink='/dashboard/home'>Вход</button>
   </form>
 
   <p class="text-[12px] leading-[17px] text-primary text-center">
