--- a/src/app/modules/dashboard/components/card-item/card-item.component.html
+++ b/src/app/modules/dashboard/components/card-item/card-item.component.html
@@ -1,6 +1,6 @@
 <div class='relative'>
-  <div class='flex gap-[6px] items-center absolute top-[6px] left-[6px]'>
-    <span class='text-[12px] leading-[14px] px-[4px] py-[2.5px] text-white rounded-[24px] bg-primary'>ТОП</span>
+  <div class='flex items-center absolute top-[6px] left-[6px]'>
+    <span class='text-[12px] mr-[6px] leading-[14px] px-[4px] py-[2.5px] text-white rounded-[24px] bg-primary'>ТОП</span>
     <span class='text-[12px] leading-[14px] px-[4px] py-[2.5px] text-white rounded-[24px] bg-blue'>10%</span>
   </div>
   <span class='icon icon-heart w-[14px] h-[12px] bg-primary absolute top-[10px] right-[7px]'></span>
@@ -9,15 +9,15 @@
 
 <div class='py-[7px] px-[12px]'>
   <p class='font-medium	text-gray-strong text-[12px] leading-[14px]'>Пленка полиэтиленовая вторичная</p>
-  <div class='flex items-center gap-[8px] mt-[5px]'>
-    <span class='text-[14px] leading-[17px] font-semibold text-primary'>$25</span>
+  <div class='flex items-center mt-[5px]'>
+    <span class='text-[14px] leading-[17px] font-semibold text-primary mr-[8px]'>$25</span>
     <span class='text-[10px] leading-[12px] text-gray-strong line-through'>$25</span>
   </div>
   <div class='flex items-center justify-between'>
     <p class='text-[12px] leading-[14px] font-medium text-gray'>Алматы</p>
-    <span class='flex items-center gap-[3px]'>
+    <span class='flex items-center'>
       <span class='icon icon-user w-[9px] bg-gray'></span>
-      <span class='text-[12px] leading-[14px] font-medium text-gray'>4.7</span>
+      <span class='text-[12px] leading-[14px] font-medium text-gray ml-[3px]'>4.7</span>
     </span>
   </div>
 </div>
