--- a/src/app/modules/dashboard/pages/product-details/product-details.component.html
+++ b/src/app/modules/dashboard/pages/product-details/product-details.component.html
@@ -19,5 +19,17 @@
       </ion-nav-link>
       <span class='icon icon-heart bg-primary'></span>
     </div>
+
+    <div class='px-[22px] pt-[25px] pb-[15px]'>
+      <div class='flex justify-between'>
+        <h1 class='text-[18px] leading-[22px] font-bold text-gray-300'>Пленка полиэтиленовая вторичная</h1>
+        <div class='flex flex-col items-end'>
+          <p class='text-[12px] leading-[14px] text-gray-200 line-through'>$22</p>
+          <p class='text-primary text-[18px] leading-[21px] font-bold'>$16</p>
+        </div>
+      </div>
+
+      <div class='mt-[4px] text-[14px] leading-[17px] font-medium text-gray'>Алматы</div>
+    </div>
   </div>
 </ion-content>
