--- a/src/app/modules/auth/pages/register-page/register-page.component.html
+++ b/src/app/modules/auth/pages/register-page/register-page.component.html
@@ -1,4 +1,4 @@
-<div class="pt-[90px] px-[35px] flex flex-col justify-between h-full pb-[42px]">
+<div class="pt-[90px] px-[35px] flex flex-col justify-between h-full pb-[42px] bg-white">
   <h1 class="pl-[5px] text-[36px] leading-[43px] text-primary font-bold">
     Регистрация
   </h1>
