--- a/src/app/modules/auth/pages/welcome-page/welcome-page.component.html
+++ b/src/app/modules/auth/pages/welcome-page/welcome-page.component.html
@@ -1,4 +1,4 @@
-<div class="welcome">
+<div class="welcome bg-white">
   <div class='flex justify-center w-full'>
     <img class="mt-[90px] max-w-[300px] text-center" src="./assets/icon/img.svg" alt="" />
   </div>
