--- a/src/theme/_button.scss
+++ b/src/theme/_button.scss
@@ -14,4 +14,12 @@
   &-outline-primary {
     @apply text-gray-strong border-2 border-primary border-solid;
   }
+
+  &:disabled {
+    @apply opacity-[.5];
+  }
+
+  &-sm {
+    @apply py-[10.5px];
+  }
 }
