--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
       <span class="icon icon-favourite"></span>
       <ion-label class='text-[10px] leading-[12px] text-gray'>Избранное</ion-label>
     </ion-tab-button>
-    <ion-tab-button>
+    <ion-tab-button (click)='createModal()'>
       <span class="icon icon-create"></span>
       <ion-label class='text-[10px] leading-[12px] text-gray'>Создать</ion-label>
     </ion-tab-button>
