--- a/src/theme/_icons.scss
+++ b/src/theme/_icons.scss
@@ -123,4 +123,39 @@
     mask: url('../assets/icon/circle.svg') no-repeat 50% 50%;
   }
 
+  &-title {
+    -webkit-mask: url('../assets/icon/title.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/title.svg') no-repeat 50% 50%;
+  }
+
+  &-category {
+    -webkit-mask: url('../assets/icon/category.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/category.svg') no-repeat 50% 50%;
+  }
+
+  &-instagram {
+    -webkit-mask: url('../assets/icon/instagram.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/instagram.svg') no-repeat 50% 50%;
+  }
+
+  &-add-square {
+    -webkit-mask: url('../assets/icon/add-square.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/add-square.svg') no-repeat 50% 50%;
+  }
+
+  &-description {
+    -webkit-mask: url('../assets/icon/description.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/description.svg') no-repeat 50% 50%;
+  }
+
+  &-location {
+    -webkit-mask: url('../assets/icon/location.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/location.svg') no-repeat 50% 50%;
+  }
+
+  &-wallet {
+    -webkit-mask: url('../assets/icon/wallet.svg') no-repeat 50% 50%;
+    mask: url('../assets/icon/wallet.svg') no-repeat 50% 50%;
+  }
+
 }
