--- a/src/app/modules/dashboard/pages/product-details/product-details.component.html
+++ b/src/app/modules/dashboard/pages/product-details/product-details.component.html
@@ -29,7 +29,8 @@
         </div>
       </div>
 
-      <div class='mt-[4px] text-[14px] leading-[17px] font-medium text-gray' *ngIf='offerByIdData?.city'>{{ offerByIdData.city.name }}</div>
+      <div class='mt-[4px] text-[14px] leading-[17px] font-medium text-gray'
+           *ngIf='offerByIdData?.city'>{{ offerByIdData.city.name }}</div>
       <div class='mt-[8px] flex'>
         <span class='icon icon-star-full ml-[4px] w-[16px]'></span>
         <span class='icon icon-star-full ml-[4px] w-[16px]'></span>
@@ -53,31 +54,32 @@
           <div class='flex ml-[8px] items-center'>
             <span class='icon icon-star-full bg-orange-100 w-[16px] mr-[6px]'></span>
             <span class='mr-[8px] text-[14px] leading-[24px] text-black'>{{ offerByIdData.user.rating }}</span>
-            <span class='text-[14px] leading-[17px] text-gray-200'>На Plastic market с {{ offerByIdData.user.created_at | date: 'dd.MM.yyy' }}</span>
+            <span
+              class='text-[14px] leading-[17px] text-gray-200'>На Plastic market с {{ offerByIdData.user.created_at | date: 'dd.MM.yyy' }}</span>
           </div>
         </div>
       </div>
 
       <div class='flex mt-[28px] mb-[32px]'>
         <button class='btn btn-outline-primary mr-[31px] btn-sm'>Написать</button>
-        <button class='btn btn-primary btn-sm'>Позвонить</button>
+        <a [href]="'tel:' + offerByIdData.user.phone" class='btn btn-primary btn-sm'>Позвонить</a>
       </div>
 
       <div class='w-full rounded-[12px] flex bg-primary-100 items-center'>
         <div
           *ngFor="let i of ['Описание', 'Доставка и оплата']; let idx = index"
-          class='text-[14px] leading-[18px] font-semibold rounded-[12px] px-[15px] py-[13px] transition-all	'
+          class='text-[14px] leading-[18px] font-semibold rounded-[12px] px-[15px] py-[13px] transition-all	text-gray-700'
           [class.active]='active === idx' (click)='active = idx'>{{i}}</div>
       </div>
 
-     <ng-container [ngSwitch]='active'>
-       <div *ngSwitchCase='0' class='text-[14px] leading-[23px] text-gray-300 mt-[24px]'>
-         {{ offerByIdData.description }}
-       </div>
-       <div *ngSwitchCase='1' class='text-[14px] leading-[23px] text-gray-300 mt-[24px]'>
+      <ng-container [ngSwitch]='active'>
+        <div *ngSwitchCase='0' class='text-[14px] leading-[23px] text-gray-300 mt-[24px]'>
+          {{ offerByIdData.description }}
+        </div>
+        <div *ngSwitchCase='1' class='text-[14px] leading-[23px] text-gray-300 mt-[24px]'>
 
-       </div>
-     </ng-container>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf='false'>
         <div class='text-[16px] font-semibold text-black mt-[40px] mb-[25px]'>Характеристики</div>
